# sportia

./: .gitignore  .mcp.json  CLAUDE.md  README.md  alcance-sportia.md  captain-definition  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: auto-deploy.yml
apps/api/: .env.example  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: admin_routes.py  import_routes.py  matching_routes.py  results_routes.py  sync_routes.py
apps/api/app/core/: config.py
apps/api/app/services/: auth.py  fecna_import.py  fecna_lookup.py  fecna_sync.py  matching.py  supabase_client.py
apps/web/: .env.example  DEPLOY.md  app.config.ts  netlify.toml  nuxt.config.ts  package.json  tailwind.config.ts  vercel.json
apps/web/composables/: useAppToast.ts  useAthletes.ts  useAuth.ts  useCatalogs.ts  useChartExport.ts  useCharts.ts  useClubMatching.ts  useClubs.ts  useCoaches.ts  useCompetitionResults.ts  useMatching.ts  useObjectives.ts  usePWAInstall.ts  useProfile.ts  useResultsSync.ts  useSimulation.ts  useSwimmingMetrics.ts  useTrainingSessions.ts  useTrainingSets.ts  useUserManagement.ts
apps/web/layouts/: auth.vue  default.vue
apps/web/middleware/: auth.ts
apps/web/pages/: forgot-password.vue  index.vue  (+2 more)
infra/caprover/: CICD.md  README.md  setup-branches.sh
infra/docker/: Dockerfile.api  Dockerfile.web
supabase/: README.md
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_functions_views.sql  004_sync_fields.sql  005_add_document_number.sql  006_add_athlete_id_to_competition_results.sql
(+70 files in other folders)
